source-repository head
  type:     git
  location: https://github.com/hackwithlambda/typed-html

name:                typed-html
version:             0.1.0.0
synopsis:            Typed tags (XML, HTML)
description:         Please see README.org
homepage:            https://github.com/hackwithlambda/typed-html/blob/master/README.org
license:             MIT
license-file:        LICENSE
author:              Matthew Chan <matt@parametri.city>, Bryan Garza <brygarza@gmail.com>
maintainer:          Matthew Chan <matt@parametri.city>, Bryan Garza <brygarza@gmail.com>
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Html
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5
                     , unordered-containers >= 0.2
                     , data-default >= 0.5
                     , mtl >= 2.1
                     , transformers >= 0.3
                     , parsec >= 3.1
                     , pretty >= 1.1
                     , process >= 1.2
                     , syb >= 0.4.4
                     , text >= 1.2
                     , vector >= 0.10
                     , hashable >= 1.2
                     , aeson >= 0.10 && < 1.0
                     , bytestring >= 0.10
                     , bifunctors >= 5.1
                     , profunctors
                     , lens


  default-language:    Haskell2010

test-suite typed-html-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , typed-html
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
